--- a/src/scss/partials/_watch.scss
+++ b/src/scss/partials/_watch.scss
@@ -2,22 +2,34 @@
   position: relative;
   .watch-title {
     position: absolute;
-    top: -2em;
+    top: -2.3em;
     padding-top: 0.5em;
+    @include media-max-width($md-breakpoint-max) {
+      top: -2.5em;
+    }
   }
 }
 
 .section-watch__item {
   width: 100%;
   height: 120px;
-  padding-top: 40px;
+  //padding-top: 40px;
+  display: flex;
+  align-items: center;
   background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
   @include transition-all-ease(0.5s);
 
+  @include media-max-width($md-breakpoint-max) {
+    height: 90px;
+    background-size: cover;
+  }
+
   &:hover {
-    background-size: 106%;
+    @include media-min-width($md-breakpoint-min) {
+      background-size: 106%;
+    }
   }
 
   &.bimini-bg {
@@ -53,10 +65,18 @@
     opacity: 1;
   }
 
+  .col-6 {
+    display: flex;
+    align-items: center;
+  }
+
   .nav-link {
     display: inline-block;
     font-size: 1.5em;
     line-height: 1.2;
+    @include media-max-width($sm-breakpoint-max) {
+      font-size: 1.2em;
+    }
     small {
       font-size: 0.8em;
     }
